# pyperun

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GETTING_STARTED.md  ISSUES.md  PRD_ui.md  README.md  api_server.py  database.py  docker-compose.yml  flask_app.py  install.sh  main.py  pyproject.toml  runner.py  scheduler.py  task_status.db  tasks.py  todo.md
doc/: PRD.md  TODO.md  discussion-normalization.md
flows/: bp1.json  stab-dreissene.json  test.json  valvometry_daily.json  valvometry_full.json
pyperun/: cli.py  mcp.py  seed.py  server.py
pyperun/core/: api.py  filename.py  flow.py  logger.py  pipeline.py  runner.py  scheduler.py  schedules.py  timefilter.py  validator.py
pyperun/treatments/aggregate/: run.py  treatment.json
pyperun/treatments/clean/: run.py  treatment.json
pyperun/treatments/exportcsv/: run.py  treatment.json
scripts/: backfill.sh  daily_sync.sh  hourly_sync.sh  install_system_deps.sh  pyperun-init  pyperun-seed-demo  rowcount.py  run_flow_hourly.sh  run_scheduled_flows.sh  seed_demo.py  update.sh
templates/: index.html
tests/: test_api_logs.py  test_cli_logs.py  test_exportcsv.py  test_exportduckdb.py  test_filename.py  test_logger.py  test_normalize.py  test_parse.py  test_runner.py  test_schedules.py  test_timefilter.py  test_to_postgres.py  test_transform.py
ui_tests/version1/: catalog.html  dashboard.html  editor.html  history.html  monitor.html
ui_tests/version2/: README.md  catalog.html  dashboard.html  editor.html  getting-started.html  history.html  login.html  monitor.html  schedules.html
(+21 files in other folders)
